syntax = "proto3";

package brand;
option go_package="./brand";

service Brand {
  rpc Info(InfoReq) returns(BrandInfo);
}

// information
message InfoReq {
  int64 brand_id = 1;
}

message BrandInfo {
  int64 id = 1;
  int64 own_by = 2;
  int64 category_id = 3;
  string name = 4;
  string abbreviation = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}
